fixed spacing

--- a/src/Tile.css
+++ b/src/Tile.css
@@ -96,5 +96,6 @@
   font-weight: 300;
   font-size: 14px;
   padding-top: 6px;
+  line-height: 150%;
 
 }
